--- a/style.css
+++ b/style.css
@@ -10,3 +10,67 @@ body {
 }
 
 /* Add styles here! */
+
+header {
+  background-color: #fff;
+  margin-top: 80px;
+  margin-bottom: 56px;
+  padding-bottom: 8px;
+}
+
+main {
+  background-color: hsl(0deg, 0%, 40%);
+}
+
+.max-width-wrapper {
+  width: 95vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .max-width-wrapper {
+    width: 60%;
+  }
+  p {
+    font-size: 1.25rem;
+  }
+}
+
+.intro-chunk h1,
+p {
+  padding-left: 24px;
+}
+
+h1 {
+  margin-bottom: 64px;
+}
+
+.intro-chunk p:nth-of-type(1) {
+  max-width: 450px;
+}
+
+p {
+  line-height: 1.5;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+section.max-width-wrapper {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.card {
+  background-color: #fff;
+  padding: 16px 0px;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 40%);
+  margin-top: 16px;
+  margin-left: -8px;
+  padding: 16px 16px;
+  width: fit-content;
+}
